Fix box shadow when text wraps

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -85,12 +85,12 @@ nav ul li a {
     transition: all 0.3s ease;
 }
 
-nav ul li a:hover {
+nav ul li:hover {
     background-color: #4c8baf;
     border-radius: 5px;
 }
 
-nav ul li a.active {
+nav ul li.active {
     background-color: #4c8baf;
     border-radius: 5px;
     box-shadow: 0 0 10px #4c8baf;
